[tool.poetry]
name = "lisa-api"
version = "0.1.0"
description = "Lisa API"
authors = ["Jose Kuiaski <jose.kuiaski@homer.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
azure-servicebus = "^7.13.0"
python = ">=3.11,<3.12"
pymongo = "4.8.0"
mongoengine = "^0.28.2"
openpyxl = "^3.1.5"
python-dotenv = "^1.0.1"
twilio = "^9.2.3"
flask-cors = "^4.0.1"
gunicorn = "^22.0.0"
werkzeug = "^3.0.3"
rollbar = "^1.0.0"
gevent = "^24.2.1"
quart = "^0.19.6"
quart-cors = "^0.7.0"
lisa-core = {version= "1.2.3", source = "homer"}
lisa-fbp = {version = "0.7.1", source = "homer"}
lisa-components-crm-tenda = {version = "0.5.2", source = "homer"}
lisa-component-crm-c2s = {version = "0.6.2", source = "homer"}
lisa-components-integration-api = {version = "0.3.3", source = "homer"}
lisa-components-source-facilita = {version = "0.4.3", source = "homer"}
lisa-components-crm-cv = {version = "0.2.4", source = "homer"}
lisa-components-crm-aocubo = {version = "0.1.3", source = "homer"}
lisa-graph-homer = {version = "0.14.4", source = "homer"}
lisa-graphs-eph = {version = "0.8.2", source = "homer"}
lisa-graphs-mbigucci = {version = "0.5.6", source = "homer"}
lisa-graphs-mitre = {version = "0.7.4", source = "homer"}
lisa-graphs-tenda = {version = "0.15.5", source = "homer"}
lisa-graphs-sua-casa-digital = {version = "0.3.5", source = "homer"}
lisa-graphs-tegra = {version = "0.4.3", source = "homer"}
lisa-graphs-buriti = {version = "0.2.6", source = "homer"}
lisa-graphs-aocubo = {version = "0.1.8", source = "homer"}
lisa-graphs-demo = {version = "0.1.4", source = "homer"}
lisa-graphs-alto-baixo = {version = "0.1.5", source = "homer"}

lisa-graphs-cyrela = {version = "0.5.4", source = "homer"}
mixpanel = "^4.10.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
python-multipart = "^0.0.20"
lisa-graphs-lumy = {path = "C:/Users/yohan/OneDrive/Documentos/homer/lisa-graphs-lumy", develop = true}



[[tool.poetry.source]]
name = "homer"
url = "https://gitlab.com/api/v4/projects/70744915/packages/pypi/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"